--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -9,7 +9,7 @@
     "- Sebastian Monteiro \n",
     "- Simón Campos Rojas \n",
     "- Dylan Riquelme  \n",
-    "- Benjamín Mancilla XD\n",
+    "- Benjamín Mancilla\n",
     "\n",
     "## Introducción: Problema y Motivación\n",
     "La ciencia de materiales es un campo en constante evolución que desempeña un papel fundamental en la creación de tecnologías innovadoras y en la mejora de los materiales existentes para una amplia gama de aplicaciones. En este contexto, la minería de datos emerge como una poderosa herramienta que nos permite desentrañar patrones, descubrir relaciones y extraer información valiosa a partir de vastos conjuntos de datos relacionados con materiales.\n",
@@ -37,7 +37,7 @@
    "source": [
     "## 1.- Consiguiendo los datos:\n",
     "\n",
-    "En primera instancia, se obtiene una llave mediante una cuenta creada en la pagina de *Materials Project* para acceder a la base de datos de la misma, luego se descargan los datos y se almacenan en archivos .csv. Despues se crea un repositorio en *Github* con todos los datos, los requerimientos para el proyecto (librerias) y los archivos *.ipynb* para el futuro codigo. \n",
+    "En primera instancia, se obtiene una llave mediante una cuenta creada en la pagina de *Materials Project* para acceder a la base de datos de la misma, luego se descargan los datos y se almacenan en archivos .csv. Después se crea un repositorio en *Github* con todos los datos, los requerimientos para el proyecto (librerías) y los archivos *.ipynb* para el futuro código. \n",
     "Para revisar los atributos extraídos para cada clase o dataset, ir a la [tabla anexada](#tabla-de-atributos)."
    ]
   },
@@ -47,7 +47,7 @@
    "source": [
     "## 2.- Limpieza de datos\n",
     "\n",
-    "A priori no ser requiere una limpieza de datos tan exhaustiva para los datos, dado que *Materials Project* tiene los datasets muy completos. Sin embargo, se tuvo que eliminar una columna repetida llamada *\"Unnamed: 0\"* porque correspondían a los ID´s repetidos y se dejaron todas las columnas solicitadas en el query inicial.\n",
+    "A priori no se requiere una limpieza de datos tan exhaustiva para los datos, dado que *Materials Project* tiene los datasets muy completos. Sin embargo, se tuvo que eliminar una columna repetida llamada *\"Unnamed: 0\"* porque correspondían a los ID´s repetidos y se dejaron todas las columnas solicitadas en el query inicial.\n",
     "\n",
     "Luego se procede a unir los dataframes mediante un merge en base a la ID de cada objeto, para facilitar la exploración de datos y la interpretación de estos, resultando en un dataframe con 7290 filas y 22 columnas. A continuación se muestran los primeros 5 objetos del dataframe:"
    ]
@@ -293,9 +293,9 @@
    "metadata": {},
    "source": [
     "Notar que cada columna es un atributo físico de los materiales. Al hacer merge, algunos materiales ya no aparecen en la lista, se redujo la cantidad de filas de ~150.000 a ~7.000. \n",
-    "Esto se produjo porque para el dataset de materiales dieléctricos no están los cálculos de los atributos para todos los materiales.\n",
+    "Esto se produjo porque, para el dataset de materiales dieléctricos, no están los cálculos de los atributos para todos los materiales.\n",
     "\n",
-    "Este análisis se realiza para poder hacer una mirada superficial a las matrices de covarianza, correlación y stats varias. Más adelante es posible que se trabaje con los dataframes por separado debido a la variedad de estructura entre los distintos materiales, o también de alguna forma establecer una estructura universal para poder realizar el merge, pero no perdiendo una cantidad de datos tan grandes."
+    "Este análisis se realiza para poder hacer una mirada superficial a las matrices de covarianza, correlación y estadísticas varias. Más adelante es posible que se trabaje con los dataframes por separado debido a la variedad de estructura entre los distintos materiales, o también de alguna forma establecer una estructura universal para poder realizar el merge, pero no perdiendo una cantidad de datos tan grandes."
    ]
   },
   {
@@ -582,47 +582,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta matriz de correlación indica varias cosas:\n",
-    "- Hay una gran correlación entre la energia de reacción en equilibrio y la entalpia de descomposicion (0.93)\n",
-    "- Entre la energía de fermi y la densidad hay una correlación interesante\n",
-    "- Entre la energía total y n hay correlación de 0.4 y entre e_total y e_electronic hay una correlación de 0.44\n",
-    "- Entre e_total y e_ionic hay una correlación de 0.93\n",
-    "Sobre las demás relaciones, hay muy poco mas que se pueda rescatar."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "De la matriz de covarianza no se puede extraer mucho mas"
+    "Como se puede observar, la gran mayoría de estos histogramas siguen un patrón de distribución $\\chi^2$, no obstante, los histogramas de energía de fermi (efermi) y de energía por átomo (energy_per_atom) parecen acercarse más a una distribución normal.\n",
+    "Hay que notar que para los histogramas de **e_total, e_ionic, e_electronic y n**, se eliminaron los valores extremos para poder apreciar mejor la distribución de los datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para obtener una vista general de los datos de cada dataframe, primero se grafico en un histograma las frecuencias cada atributo. Para ello se evitaron aquellas columnas que contienen valores en string. Se dejo aparte el dataframe de oxidation_states, que no contiene valores numericos, y del dataframe material, la columna composition, que tiene la composicion quimica del material. Luego, se realizo un resumen estadistico de los atributos numericos. Calculando la cantidad de datos, media, desviacion estandar, minimo, los cuartiles y el maximo."
+    "Se presenta la matriz de correlación de los datos:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lo primero es notar es la presencia de la forma chi-cuadrado en algunos histogramas, como también algunas forma gaussianas. Estos histogramas permiten visualizar algunos thresholds para una futura limpieza de datos."
+    "![](Figuras/MatrizCorrelación.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta matriz desvela distintas características de los datos:\n",
+    "- Entre la energía de reacción en equilibrio y la entalpía de descomposición hay una gran correlación de 0.93.\n",
+    "- Entre la energía de fermi y la densidad hay una correlación interesante de 0.53 y posiblemente útil para la caracterización de los materiales.\n",
+    "- Entre la energía total y n hay correlación de 0.4 y entre e_total y e_electronic hay una correlación de 0.44.\n",
+    "- Entre e_total y e_ionic hay una correlación de 0.93.\n",
+    "- Entre el band_gap y la energía de formación por átomo, la densidad y la energía de fermi existe una correlación inversa de -0.47, -0.39 y -0.53 respectivamente.\n",
+    "\n",
+    "Sobre las demás relaciones, hay muy poco más que se pueda rescatar, dada la baja relación entre los atributos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación se presenta la matriz de covarianza de los datos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Figuras/MatrizCovarianza.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desafortunadamente, esta matriz no nos entrega mucha información, ya que no nos deja ver la variabilidad de los datos.\n"
    ]
   },
   {
@@ -664,17 +674,17 @@
    "source": [
     "\n",
     "\n",
-    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n",
+    "- ¿Podemos identificar una característica que influya en lo bueno que puede ser un conductor?\n",
     "\n",
     "\n",
     "\n",
     "Primero, vamos a filtrar a todos los conductores usando el atributo band_gap  = 0 , esto pues se sabe que todos los conductores tienen este valor. Los semiconductores tienen un bandgap > 0 y los aislantes tienen band gap mucho mas grande. La siguiente imagen ejemplifica un material con band gap = 0 . \n",
     "\n",
-    "Notar como en el grafico de la derecha, que muestra la densidad de estados, no hay saltos en la función de color rojo.\n",
+    "Notar como en el gráfico de la derecha, que muestra la densidad de estados, no hay saltos en la función de color rojo.\n",
     "\n",
     "![Material con band gap = 0](band_gap1.png)\n",
     "\n",
-    "El siguiente material tiene un band gap distinto de cero, osea, los electrones necesitan un \"empujoncito\" para pasar de un estado ligado al estado libre de un conductor. Este empujoncito se puede conseguir con una diferencia de potencial o con el efecto túnel. Aquí la función roja no es contínua en todo el espacio, especificamente alrededor de 0.\n",
+    "El siguiente material tiene un band gap distinto de cero, es decir, los electrones necesitan un \"pequeño empujón\" para pasar de un estado ligado al estado libre de un conductor. Este \"pequeño empujón\" se puede conseguir con una diferencia de potencial o con el efecto túnel. Aquí la función roja no es continua en todo el espacio, específicamente alrededor de 0.\n",
     "\n",
     "![Material con band gap != 0](bandgap2.png)\n"
    ]
@@ -683,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Luego, debido a que no tenemos labels, clasificar no tendría sentido. Por esta razón , se realizará un clustering.\n",
+    "Luego, debido a que no tenemos labels, clasificar no tendría sentido. Por esta razón, se realizará un clustering.\n",
     "\n",
     "Primero, se probará con k-means . Para inspeccionar la cantidad idónea de clusters, primero se realizará la técnica del codo.\n",
     "\n",
@@ -691,11 +701,11 @@
     "\n",
     "También se probará con DBSCAN. La intuición física nos dice que no servirá mucho, pues la densidad de puntos no debería ser un factor de clasificación.\n",
     "\n",
-    "El cluster que nos interesa es el jerárquico, pues queremos indentificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como esto:\n",
+    "El cluster que nos interesa es el jerárquico, pues queremos identificar que tan buenos son los conductores. Queremos identificar alguna característica que tenga un gradiente que coincida con la forma en la que se agrupan los clusters. Una forma de visualizar esto sería algo como esto:\n",
     "\n",
     "![EJEMPLO_CLUSTER](CLUSTER.png)\n",
     "\n",
-    "Notar como los puntos se vuelven mas rojos a medida que nos acercamos al centro, una especie de gradiente hacia el centro nos podría indicar que esta característica influye directamente en lo bueno (o malo) que es un conductor. Se utilizará PCA para dimensionar a un gráfico.\n",
+    "Notar como los puntos se vuelven más rojos a medida que nos acercamos al centro, una especie de gradiente hacia el centro nos podría indicar que esta característica influye directamente en lo bueno (o malo) que es un conductor. Se utilizará PCA para dimensionar a un gráfico.\n",
     "\n",
     "Posteriormente se realizará una validación de los métodos de clustering e intentaremos identificar alguna característica o estructura interesante."
    ]
@@ -738,7 +748,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Repositorio del proyecto\n",
+    "[https://github.com/Fabian-Castro-C/Miner-a-de-datos](https://github.com/Fabian-Castro-C/Miner-a-de-datos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contribución de miembros del equipo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Miembro            | Tarea |\n",
+    "|--------------------|-------|\n",
+    "| Simón Campos       |       |\n",
+    "| Fabián Castro      |       |\n",
+    "| Benjamín Mancilla  |       |\n",
+    "| Sebastián Monteiro |       |\n",
+    "| Dylan Riquelme     |       |\n"
+   ]
   }
  ],
  "metadata": {
