--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -641,7 +641,6 @@
    "source": [
     "# Inquietudes a responder\n",
     "- ¿Existen grupos de materiales con características similares?\n",
-    "- ¿Podemos encontrar materiales extraños, por ejemplo, material mágnetico que no sea metálico? \n",
     "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
    ]
   },
@@ -776,7 +775,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MD_MP",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -790,9 +789,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
