--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -166,8 +166,7 @@
    "metadata": {},
    "source": [
     "# Inquietudes a responder\n",
-    "- ¿Existen grupos de materiales con características similares?\n",
-    "- ¿Podemos encontrar materiales extraños, por ejemplo, material magnético que no sea metálico? \n",
+    "- ¿Existen grupos de materiales con características similares? \n",
     "- ¿Podemos identificar una característica que influya en lo bueno que puede ser un conductor?\n"
    ]
   },
@@ -175,7 +174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ¿Existen grupos de materiales con características similares?"
+    "# Propuesta experimental para responder a las preguntas planteadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Existen grupos de materiales con características similares?"
    ]
   },
   {
@@ -199,10 +205,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "- ¿Podemos identificar una característica que influya en lo bueno que puede ser un conductor?\n",
-    "\n",
-    "\n",
+    "## ¿Podemos identificar una característica que influya en lo bueno que puede ser un conductor?\n",
     "\n",
     "Primero, vamos a filtrar a todos los conductores usando el atributo band_gap  = 0 , esto pues se sabe que todos los conductores tienen este valor. Los semiconductores tienen un bandgap > 0 y los aislantes tienen band gap mucho mas grande. La siguiente imagen ejemplifica un material con band gap = 0 . \n",
     "\n",
@@ -234,6 +237,27 @@
     "Notar como los puntos se vuelven más rojos a medida que nos acercamos al centro, una especie de gradiente hacia el centro nos podría indicar que esta característica influye directamente en lo bueno (o malo) que es un conductor. Se utilizará PCA para dimensionar a un gráfico.\n",
     "\n",
     "Posteriormente se realizará una validación de los métodos de clustering e intentaremos identificar alguna característica o estructura interesante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experimento preliminar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Existen grupos de materiales con características similares?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----INSERTAR MATRACA DE CLUSTERING----"
    ]
   },
   {
