--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -851,46 +851,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo Cluster\n",
-    "A continuación se presenta la matriz de covarianza de los datos:"
+    "## Ejemplo Cluster"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Figuras/MatrizCovarianza.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Desafortunadamente, esta matriz no nos entrega mucha información, ya que no nos deja ver la variabilidad de los datos.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Inquietudes a responder\n",
-    "- ¿Existen grupos de materiales con características similares?\n",
-    "- ¿Podemos identificar una caracteristica que influya en lo bueno que puede ser un conductor?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- ¿Existen grupos de materiales con características similares?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Al no tener labels, es directo que se va a usar clustering. Se probará con DBSCAN, con K-means y jerárquico.\n",
-    "\n",
     "![EJEMPLO_CLUSTER](CLUSTER.png)"
    ]
   },
