--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -262,13 +262,13 @@
     "![](Figuras/featureenginering.png)\n",
     "\n",
     "Una vez tratados los datos usando ingeniería de características es posible realizar cualquier algoritmo de Machine Learning.\n",
-    "\r\n",
-    "Para este hito, tuvimos un problema de RAM, lo cual nos impedía utilizar la base de datos completa para responder la primera pregunta de investigación. Por ello decidimos responderla solo para los materiales que tenían Silicio (“Si”), lo cual es interesante para la industria de los semiconductore..\r",
-    "Una vez definido este grupo de datos, que cuenta con mas de 6000 materiales, realizamos un algoritmo de clustering Kmeans utilizando el método del codo para identificar el rango de clusters optimos.\n",
+    "\n",
+    "Para este hito, tuvimos un problema de RAM, lo cual nos impedía utilizar la base de datos completa para responder la primera pregunta de investigación. Por ello decidimos responderla solo para los materiales que tenían Silicio (“Si”), lo cual es interesante para la industria de los semiconductores.\n",
+    "Una vez definido este grupo de datos, que cuenta con mas de 6000 materiales, realizamos un algoritmo de clustering K-means utilizando el método del codo para identificar el rango de clusters óptimos.\n",
     "\n",
     "Con el rango definido entre 3 y 8 clusters, fueron modelados todos y calculados el coeficiente de silueta y el indice de Davies-Bouldin encontrando que el optimo está en 4 clusters para este método.\n",
     "\n",
-    "Como resultado tenemos los siguientes resultados de matriz de similutud y de clusters.\n",
+    "Como resultado tenemos los siguientes resultados de matriz de similitud y de clusters (ver más en [anexos](#codigo-del-algoritmo-de-clustering-k-means)).\n",
     "\n",
     "![](Figuras/4_clusters.png)\n",
     "\n",
@@ -891,7 +891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Código del algoritmo de clustering K-Means"
+    "## Codigo del algoritmo de clustering K-Means"
    ]
   },
   {
@@ -1233,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
