Update Reporte.pdf y Reporte.ipynb

--- a/Reporte.ipynb
+++ b/Reporte.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Minería de datos en ciencias de materiales\n",
-    "- Fabián Castro Contreras \n",
-    "- Sebastian Monteiro \n",
-    "- Simón Campos Rojas \n",
-    "- Dylan Riquelme  \n",
+    "# Minería de datos en ciencias de materiales: Grupo 18\n",
+    "- Fabián Castro Contreras\n",
+    "- Sebastian Monteiro\n",
+    "- Simón Campos Rojas\n",
+    "- Dylan Riquelme\n",
     "- Benjamín Mancilla\n",
     "\n",
     "## Introducción: Problema y Motivación\n",
